--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ python:
   - "3.4"
 install:
   - pip install -r requirements.txt
+  - python ./manage.py makemigrations
 # command to run tests
 script: python ./manage.py test
