--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 Django==1.10.4
-django-widget-tweaks==1.4.1
+django-graphos==0.3.28
 django-solo==1.1.2
+django-widget-tweaks==1.4.1
+python-dateutil==2.6.0
+six==1.10.0
